@@ -1,3 +1,5 @@
+2005-11-30 Kalpit Desai <kvdesai@email.unc.edu>
+	* FreqSweepAnalysis.m, freqSweepAnalysis.fig: Several new features e.g. plotting 3d trace, XYZ time series etc.
 2005-11-15 Kalpit Desai <kvdesai@email.unc.edu>
 	* FreqSweepAnalysis.m: Several new features e.g. calculating and ploting cumulative displacement upto certain frequency, plotting for stage etc. 
 	* FreqSweepAnalysis.fig: Couple of relevant checkboxes
